--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formBoleto.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formBoleto.html
@@ -1,130 +1,116 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head>
-	<meta charset="UTF-8" />
-	<title th:text="${titulo}">Insert title here</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+<head th:replace="layout/layout :: head"></head>
 
 <body>
-	<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Buses</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/unidad/listar"}>Unidades</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/boleto/listar"}>Boletos</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/ruta/listar"}>Rutas</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/cronograma/listar"}>Cronogramas</a>
-					</li>
-				</ul>
+	<header th:replace="layout/layout :: header"></header>
+
+	<div class="container py-4">
+
+		<div class="card bg-dark text-white">
+			<div class="card-header" th:text="${titulo}"></div>
+			<div class="card-body">
+				<form th:action="@{/boleto/form}" th:object="${boleto}"
+					method="post" style="max-width: 600px; margin: 0 auto;">
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">dia</label>
+						<div class="col-sm-8">
+							<select th:field="*{dia}" class="form-control">
+								<option th:value="Lunes" th:text="Lunes">Lunes</option>
+								<option th:value="Martes" th:text="Martes">Martes</option>
+								<option th:value="Miercoles" th:text="Miercoles">Miercoles</option>
+								<option th:value="Jueves" th:text="Jueves">Jueves</option>
+								<option th:value="Viernes" th:text="Viernes">Viernes</option>
+								<option th:value="Sabado" th:text="Sabado">Sabado</option>
+								<option th:value="Domingo" th:text="Domingo">Domingo</option>
+							</select>
+						</div>
+					</div>
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">fecha de viaje</label>
+						<div class="col-sm-8">
+							<input type="date" th:field="*{fechaViaje}" class="form-control"
+								required>
+						</div>
+					</div>
+
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">hora de salida</label>
+						<div class="col-sm-8">
+							<input type="time" th:field="*{horaSalida}" class="form-control"
+								required>
+						</div>
+					</div>
+
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">Numero de asiento</label>
+						<div class="col-sm-8">
+							<input type="number" th:field="*{NumeroAsiento}"
+								class="form-control" required>
+						</div>
+					</div>
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">Metodo de pago</label>
+						<div class="col-sm-8">
+							<select th:field="*{metodoPago}" class="form-control">
+								<option th:value="Efectivo" th:text="Efectivo">Efectivo</option>
+								<option th:value="Tarjeta" th:text="Tarjeta">Tarjeta</option>
+							</select>
+						</div>
+					</div>
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">Descuento</label>
+						<div class="col-sm-8">
+							<input type="number" th:field="*{descuento}" class="form-control"
+								required>
+						</div>
+					</div>
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">Total a pagar</label>
+						<div class="col-sm-8">
+							<input type="number" th:field="*{totalPago}" class="form-control"
+								required>
+						</div>
+					</div>
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">iva</label>
+						<div class="col-sm-8">
+							<input type="number" th:field="*{iva}" class="form-control"
+								required>
+						</div>
+					</div>
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">Stock</label>
+						<div class="col-sm-8">
+							<input type="number" th:field="*{stockBoletos}"
+								class="form-control" required>
+						</div>
+					</div>
+					<div class="m-3"></div>
+
+					<div class="text-center p">
+						<button type="submit" class="btn btn-secondary">Guardar
+							Unidad</button>
+					</div>
+					<input type="hidden" th:field="*{id}">
+
+				</form>
+
 			</div>
 		</div>
-	</nav>
-	<div class="container">
-		<div>
-			<h1 th:text="${titulo}"></h1>
-		</div>
-		<form th:action="@{/boleto/form}" th:object="${boleto}" method="post" style="max-width:600px;margin:0 auto;">
-			<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">dia</label>
-				<div class="col-sm-8">
-					<select th:field="*{dia}" class="form-control">
-           				<option th:value="Lunes" th:text="Lunes">Lunes</option>
-						<option th:value="Martes" th:text="Martes">Martes</option>
-						<option th:value="Miercoles" th:text="Miercoles">Miercoles</option>
-						<option th:value="Jueves" th:text="Jueves">Jueves</option>
-						<option th:value="Viernes" th:text="Viernes">Viernes</option>
-						<option th:value="Sabado" th:text="Sabado">Sabado</option>
-						<option th:value="Domingo" th:text="Domingo">Domingo</option>
-					</select>
-				</div>
-			</div>
-			<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">fecha de viaje</label>
-				<div class="col-sm-8">
-					<input type="date" th:field="*{fechaViaje}" class="form-control" required>
-				</div>
-			</div>
-
-			<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">hora de salida</label>
-				<div class="col-sm-8">
-					<input type="time" th:field="*{horaSalida}" class="form-control" required>
-				</div>
-			</div>
-
-			<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">Numero de asiento</label>
-				<div class="col-sm-8">
-					<input type="number" th:field="*{NumeroAsiento}" class="form-control" required>
-				</div>
-			</div>
-			<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">Metodo de pago</label>
-				<div class="col-sm-8">
-					<select th:field="*{metodoPago}" class="form-control">
-           				<option th:value="Efectivo" th:text="Efectivo">Efectivo</option>
-						<option th:value="Tarjeta" th:text="Tarjeta">Tarjeta</option>
-					</select>
-				</div>
-			</div>
-			<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">Descuento</label>
-				<div class="col-sm-8">
-					<input type="number" th:field="*{descuento}" class="form-control" required>
-				</div>
-			</div>
-			<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">Total a pagar</label>
-				<div class="col-sm-8">
-					<input type="number" th:field="*{totalPago}" class="form-control" required>
-				</div>
-			</div>
-				<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">iva</label>
-				<div class="col-sm-8">
-					<input type="number" th:field="*{iva}" class="form-control" required>
-				</div>
-			</div>
-				<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">Stock</label>
-				<div class="col-sm-8">
-					<input type="number" th:field="*{stockBoletos}" class="form-control" required>
-				</div>
-			</div>
-			<div class="m-3"></div>
-			
-			<div class="text-center p">
-				<button type="submit" class="btn btn-primary">Guardar Unidad</button>
-			</div>
-			<input type="hidden" th:field="*{id}">
-			
-		</form>
-
 	</div>
+
+	<footer th:replace="layout/layout :: footer"></footer>
 </body>
 
 </html>
