--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formCro.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formCro.html
@@ -1,117 +1,97 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head>
-	<meta charset="UTF-8" />
-	<title th:text="${titulo}">Insert title here</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+<head th:replace="layout/layout :: head"></head>
 
 <body>
-	<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Buses</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/unidad/listar"}>Unidades</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/boleto/listar"}>Boletos</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/ruta/listar"}>Rutas</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/cronograma/listar"}>Cronogramas</a>
-					</li>
-				</ul>
+	<header th:replace="layout/layout :: header"></header>
+
+	<div class="container py-4">
+
+		<div class="card bg-dark text-white">
+			<div class="card-header" th:text="${titulo}"></div>
+			<div class="card-body">
+				<form th:action="@{/cronograma/form}" th:object="${cronograma}"
+					method="post" style="max-width: 600px; margin: 0 auto;">
+
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">Fecha</label>
+						<div class="col-sm-8">
+							<input type="date" th:field="*{fecha}" class="form-control"
+								required>
+						</div>
+					</div>
+
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">Descripcion </label>
+						<div class="col-sm-8">
+							<input type="text" th:field="*{descripcion}" class="form-control"
+								required>
+						</div>
+					</div>
+
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">Dia</label>
+						<div class="col-sm-8">
+							<select th:field="*{dia}" class="form-control">
+								<option th:value="Lunes" th:text="Lunes">Lunes</option>
+								<option th:value="Martes" th:text="Martes">Martes</option>
+								<option th:value="Miercoles" th:text="Miercoles">Miercoles</option>
+								<option th:value="Jueves" th:text="Jueves">Jueves</option>
+								<option th:value="Viernes" th:text="Viernes">Viernes</option>
+								<option th:value="Sabado" th:text="Sabado">Sabado</option>
+								<option th:value="Domingo" th:text="Domingo">Domingo</option>
+							</select>
+
+						</div>
+					</div>
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">Mes</label>
+						<div class="col-sm-8">
+							<select th:field="*{mes}" class="form-control">
+								<option th:value="Enero" th:text="Enero">Enero</option>
+								<option th:value="Febrero" th:text="Febrero">Febrero</option>
+								<option th:value="Marzo" th:text="Marzo">Marzo</option>
+								<option th:value="Abril" th:text="Abril">Abril</option>
+								<option th:value="Mayo" th:text="Mayo">Mayo</option>
+								<option th:value="Junio" th:text="Junio">Junio</option>
+								<option th:value="Julio" th:text="Julio">Julio</option>
+								<option th:value="Agosto" th:text="Agosto">Agosto</option>
+								<option th:value="Septiembre" th:text="Septiembre">Septiembre</option>
+								<option th:value="Octubre" th:text="Octubre">Octubre</option>
+								<option th:value="Noviembre" th:text="Noviembre">Noviembre</option>
+								<option th:value="Diciembre" th:text="Diciembre">Diciembre</option>
+							</select>
+						</div>
+					</div>
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">Año</label>
+						<div class="col-sm-8">
+							<input type="number" th:field="*{anio}" class="form-control"
+								required>
+						</div>
+					</div>
+
+					<div class="m-3"></div>
+
+
+					<div class="text-center p">
+						<button type="submit" class="btn btn-secondary">Guardar
+							Cronograma</button>
+					</div>
+					<input type="hidden" th:field="*{id}">
+
+				</form>
+
 			</div>
 		</div>
-	</nav>
-	<div class="container">
-		<div>
-			<h1 th:text="${titulo}"></h1>
-		</div>
-		<form th:action="@{/cronograma/form}" th:object="${cronograma}" method="post"
-			style="max-width:600px;margin:0 auto;">
-
-			<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">Fecha</label>
-				<div class="col-sm-8">
-					<input type="date" th:field="*{fecha}" class="form-control" required>
-				</div>
-			</div>
-
-			<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">Descripcion </label>
-				<div class="col-sm-8">
-					<input type="text" th:field="*{descripcion}" class="form-control" required>
-				</div>
-			</div>
-
-			<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">Dia</label>
-				<div class="col-sm-8">
-					<select th:field="*{dia}" class="form-control">
-           				<option th:value="Lunes" th:text="Lunes">Lunes</option>
-						<option th:value="Martes" th:text="Martes">Martes</option>
-						<option th:value="Miercoles" th:text="Miercoles">Miercoles</option>
-						<option th:value="Jueves" th:text="Jueves">Jueves</option>
-						<option th:value="Viernes" th:text="Viernes">Viernes</option>
-						<option th:value="Sabado" th:text="Sabado">Sabado</option>
-						<option th:value="Domingo" th:text="Domingo">Domingo</option>
-					</select>
-
-				</div>
-			</div>
-			<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">Mes</label>
-				<div class="col-sm-8">
-					<select th:field="*{mes}" class="form-control">
-           				<option th:value="Enero" th:text="Enero">Enero</option>
-						<option th:value="Febrero" th:text="Febrero">Febrero</option>
-						<option th:value="Marzo" th:text="Marzo">Marzo</option>
-						<option th:value="Abril" th:text="Abril">Abril</option>
-						<option th:value="Mayo" th:text="Mayo">Mayo</option>
-						<option th:value="Junio" th:text="Junio">Junio</option>
-						<option th:value="Julio" th:text="Julio">Julio</option>
-						<option th:value="Agosto" th:text="Agosto">Agosto</option>
-						<option th:value="Septiembre" th:text="Septiembre">Septiembre</option>
-						<option th:value="Octubre" th:text="Octubre">Octubre</option>
-						<option th:value="Noviembre" th:text="Noviembre">Noviembre</option>
-						<option th:value="Diciembre" th:text="Diciembre">Diciembre</option>
-					</select>
-				</div>
-			</div>
-			<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">Año</label>
-				<div class="col-sm-8">
-					<input type="number" th:field="*{anio}" class="form-control" required>
-				</div>
-			</div>
-
-			<div class="m-3"></div>
-
-
-			<div class="text-center p">
-				<button type="submit" class="btn btn-primary">Guardar Cronograma</button>
-			</div>
-			<input type="hidden" th:field="*{id}">
-
-		</form>
-
 	</div>
+	<footer th:replace="layout/layout :: footer"></footer>
 </body>
 
 </html>
