--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formUsuario.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formUsuario.html
@@ -1,93 +1,66 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head>
-	<meta charset="UTF-8" />
-	<title th:text="${titulo}">Insert title here</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+<head th:replace="layout/layout :: head"></head>
 
 <body>
-	<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Buses</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/unidad/listar"}>Unidades</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/boleto/listar"}>Boletos</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/ruta/listar"}>Rutas</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/cronograma/listar"}>Cronogramas</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/personal/listar"}>Personal</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/usuario/listar"}>Personal</a>
-					</li>
-				</ul>
+	<header th:replace="layout/layout :: header"></header>
+	<div class="container py-4">
+
+		<div class="card bg-dark text-white">
+			<div class="card-header" th:text="${titulo}"></div>
+			<div class="card-body">
+				<form th:action="@{/usuario/form}" th:object="${usuario}"
+					method="post" style="max-width: 600px; margin: 0 auto;">
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">Nombre </label>
+						<div class="col-sm-8">
+							<input type="text" th:field="*{nombreUsuario}"
+								class="form-control" required>
+						</div>
+					</div>
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">Correo Usuario</label>
+						<div class="col-sm-8">
+							<input type="email" th:field="*{correoUsuario}"
+								class="form-control" required>
+						</div>
+					</div>
+
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">Contraseña usuario</label>
+						<div class="col-sm-8">
+							<input type="password" th:field="*{contraseñaUsuario}"
+								class="form-control" required>
+						</div>
+					</div>
+					<div class="m-3"></div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">Estado Actividad</label>
+						<div class="col-sm-8">
+							<select th:field="*{estadoActividad}" class="form-control">
+								<option th:value="ACTIVO" th:text="Activo">Activo</option>
+								<option th:value="INACTIVO" th:text="Inactivo">Inactivo</option>
+							</select>
+						</div>
+					</div>
+					<div class="m-3"></div>
+
+					<div class="text-center p">
+						<button type="submit" class="btn btn-secondary">Guardar
+							usuario</button>
+					</div>
+					<input type="hidden" th:field="*{id}">
+
+				</form>
+
 			</div>
 		</div>
-	</nav>
-	<div class="container">
-		<div>
-			<h1 th:text="${titulo}"></h1>
-		</div>
-		<form th:action="@{/usuario/form}" th:object="${usuario}" method="post"
-			style="max-width:600px;margin:0 auto;">
-			<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">Nombre </label>
-				<div class="col-sm-8">
-					<input type="text" th:field="*{nombreUsuario}" class="form-control" required>
-				</div>
-			</div>
-			<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">Correo Usuario</label>
-				<div class="col-sm-8">
-					<input type="email" th:field="*{correoUsuario}" class="form-control" required>
-				</div>
-			</div>
-		
-			<div class="m-3"></div>
-				<div class="form-group row">
-				<label class="col-form-label col-sm-4">Contraseña usuario</label>
-				<div class="col-sm-8">
-					<input type="password" th:field="*{contraseñaUsuario}" class="form-control" required>
-				</div>
-			</div>
-			<div class="m-3"></div>
-			<div class="form-group row">
-				<label class="col-form-label col-sm-4">Estado Actividad</label>
-				<div class="col-sm-8">
-					<select th:field="*{estadoActividad}" class="form-control">
-           				<option th:value="ACTIVO" th:text="Activo">Activo</option>
-						<option th:value="INACTIVO" th:text="Inactivo">Inactivo</option>
-					</select>
-				</div>
-			</div>
-			<div class="m-3"></div>
-
-			<div class="text-center p">
-				<button type="submit" class="btn btn-primary">Guardar usuario</button>
-			</div>
-			<input type="hidden" th:field="*{id}">
-
-		</form>
-
 	</div>
+	<footer th:replace="layout/layout :: footer"></footer>
 </body>
 
 </html>
