--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarBoleto.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarBoleto.html
@@ -1,88 +1,60 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head>
-	<meta charset="UTF-8" />
-	<title >Unidades disponibles</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+<head th:replace="layout/layout :: head"></head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Buses</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/unidad/listar"}>Unidades</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Boletos</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/ruta/listar"}>Rutas</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/cronograma/listar"}>Cronogramas</a>
-					</li>
-				</ul>
+	<header th:replace="layout/layout :: header"></header>
+
+	<div class="container py-4">
+		<div class="card bg-light">
+			<div class="card-header" th:text="${titulo}"></div>
+			<div class="card-body">
+
+				<h4 class="card-title">
+					<a th:href="@{/boleto/form}" class="btn btn-primary">Crear
+						Unidad</a>
+				</h4>
+				<table class="table table-striped table-bordered">
+					<thead class="thead-inverse">
+						<tr>
+							<th class="bg-dark text-white">id</th>
+							<th class="bg-dark text-white">dia</th>
+							<th class="bg-dark text-white">fecha de viaje</th>
+							<th class="bg-dark text-white">hora de salida</th>
+							<th class="bg-dark text-white">numero de asiento</th>
+							<th class="bg-dark text-white">metodo de pago</th>
+							<th class="bg-dark text-white">descuento</th>
+							<th class="bg-dark text-white">total a pagar</th>
+							<th class="bg-dark text-white">iva</th>
+							<th class="bg-dark text-white">stock</th>
+							<th class="bg-dark text-white">editar</th>
+							<th class="bg-dark text-white">eliminar</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="boleto: ${boletos}">
+							<td th:text="${boleto.id}"></td>
+							<td th:text="${boleto.dia}"></td>
+							<td th:text="${boleto.fechaViaje}"></td>
+							<td th:text="${boleto.horaSalida}"></td>
+							<td th:text="${boleto.numeroAsiento}"></td>
+							<td th:text="${boleto.metodoPago}"></td>
+							<td th:text="${boleto.descuento}"></td>
+							<td th:text="${boleto.totalPago}"></td>
+							<td th:text="${boleto.iva}"></td>
+							<td th:text="${boleto.stockBoletos}"></td>
+							<td><a class="btn btn-primary btn-xs"
+								th:href="@{/boleto/form/}+ ${boleto.id}">editar</a></td>
+							<td><a class="btn btn-danger btn-xs"
+								th:href="@{/boleto/eliminar/}+ ${boleto.id}">eliminar</a></td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
-	</nav>
-	<div class="container">
-		<h1 class="text-primary border border-primary border-top-0 border-end-0 border-start-0 " th:text="${titulo}">
-		</h1>
-
-		
-		<table class="table table-striped">
-			<thead>
-				<tr>
-					<th>id</th>
-					<th>dia</th>
-					<th>fecha de viaje</th>
-					<th>hora de salida</th>
-					<th>numero de asiento</th>
-					<th>metodo de pago</th>
-					<th>descuento</th>
-					<th>total a pagar</th>
-					<th>iva</th>
-					<th>stock</th>
-					<th>editar</th>
-					<th>eliminar</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="boleto: ${boletos}">
-					<td th:text="${boleto.id}"></td>
-					<td th:text="${boleto.dia}"></td>
-					<td th:text="${boleto.fechaViaje}"></td>
-					<td th:text="${boleto.horaSalida}"></td>
-					<td th:text="${boleto.numeroAsiento}"></td>
-					<td th:text="${boleto.metodoPago}"></td>
-					<td th:text="${boleto.descuento}"></td>
-					<td th:text="${boleto.totalPago}"></td>
-					<td th:text="${boleto.iva}"></td>
-					<td th:text="${boleto.stockBoletos}"></td>
-					<td > <a class="btn btn-secondary btn-xs" th:href="@{/boleto/form/}+ ${boleto.id}">editar</a></td>
-					<td > <a class="btn btn-danger btn-xs" th:href="@{/boleto/eliminar/}+ ${boleto.id}">eliminar</a></td>
-				</tr>
-			</tbody>
-		</table>
-	<a th:href="@{/boleto/form}" class="btn btn-secondary">Crear Unidad</a>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-		integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-		integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-		crossorigin="anonymous"></script>
-	
+
+	<footer th:replace="layout/layout :: footer"></footer>
+
 </body>
 </html>
