--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/home.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/home.html
@@ -23,14 +23,14 @@
 					<h2>Puede editar sus unidades,rutas y cronogramas de la app</h2>
 					<div class="d-flex justify-content-center justify-content-lg-start">
 						<a href="#about" class="btn-get-started scrollto">Get Started</a>
-						<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q"
+						<a href="https://youtu.be/D0SdaYGYa4I"
 							class="glightbox btn-watch-video"><i
 							class="bi bi-play-circle"></i><span>Watch Video</span></a>
 					</div>
 				</div>
 				<div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in"
 					data-aos-delay="200">
-					<img src="/images/img.jpg" class="img-fluid animated"
+					<img src="/images/hero-img.png" class="img-fluid animated"
 						alt="">
 				</div>
 			</div>
