--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/home.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/home.html
@@ -1,61 +1,120 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="layout/layout :: head"></head>
+<head th:replace="personal/layout :: head">
+
+</head>
+
 <body>
+	<link rel="stylesheet" th:href="@{/css/personal/home.css}" />
+
+	<header th:replace="personal/layout :: header"></header>
+
+
+
+
+	<!-- Jumbotron Header -->
+	<div class="nombre">
+		<h4 class="titulo">
+			Bienvenido <span th:text="${personal}"></span>
+			<p class="descrip">
+				Aqui realizaras tus actividades
+			</p>
+		</h4>
+	</div>
+	<div class="busqueda">
+
+	<div class="text-center">
+    <h1 class="card-title">BookMyDrive</h1>
+    <img th:src="@{/images/personal/img6.png}" class="img-fluid rounded-start img-thumbnail" style="width: 50%;" alt="...">
+</div>
+
+	</div>
 	
-	 <h4>
-			Bienvenidoss <span sec:authentication="principal.username"></span>
+	<div class="info">
+
+		<h4 class="viaj">
+			¿Que debe tener presente nuestro personal siempre?
 		</h4>
-		<h4>
-			Puede visualizar los boletos vendidossd
-		</h4>
-		 <div class="m-3"></div>
-	<header th:fragment="header">
-
-		<nav class="navbar navbar-expand-lg bg-body-tertiary"
-			data-bs-theme="dark">
-			<div class="container-fluid">
-				<a class="navbar-brand" th:href="${'/'}">Buses</a>
-				<button class="navbar-toggler" type="button"
-					data-bs-toggle="collapse" data-bs-target="#navbarNav"
-					aria-controls="navbarNav" aria-expanded="false"
-					aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link"
-							th:href="${'/personal/boleto'}">Boletos</a></li>
-						
-								<li class="nav-item"><a class="nav-link"
-							href="/logout">Cerrar sesión</a></li>
-						
-					</ul>
-				</div>
-			</div>
-		</nav>
-		<div class="alert alert-success" th:if="${success != null}"
-			th:text=${success}></div>
-		<div class="alert alert-danger" th:if="${error != null}"
-			th:text=${error}></div>
-		<div class="alert alert-warning" th:if="${warning != null}"
-			th:text=${warning}></div>
-		<div class="alert alert-info" th:if="${info != null}" th:text=${info}></div>
 		
-		
-	</header>
-
-      <!-- /.row -->
-
+		<div id="tarjeta2" class="row text-center mb-3" >
+    <div class="card" style="max-width: 450px;" >
+        <div class="row g-0 mb-2"> <!-- Aplicar el margen inferior aquí -->
+         
+            <div class="col-md-4">
+                <img th:src="@{/images/personal/img1.png}" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title" > Rutas Completadas</h5>
+                    <p class="card-text"><small class="text-muted" >Siempre identificamos y colaboramos para completar todas las rutas creadas por el administrador</small></p>
+       
+                </div>
+            </div>
+        </div>
     </div>
-    <!-- /.container -->
+      <div class="card" style="max-width: 450px;" >
+        <div class="row g-0 mb-2"> <!-- Aplicar el margen inferior aquí -->
+         
+            <div class="col-md-4">
+                <img th:src="@{/images/personal/img2.png}" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title" > Brindar Satisfaccion a los Clientes</h5>
+                    <p class="card-text"><small class="text-muted" >
+Brindamos atención excepcional porque cada interacción es una oportunidad para crear satisfacción</small></p>
+       
+                </div>
+            </div>
+        </div>
+    </div>
+      <div class="card" style="max-width: 450px;" >
+        <div class="row g-0 mb-2"> <!-- Aplicar el margen inferior aquí -->
+         
+            <div class="col-md-4">
+                <img th:src="@{/images/personal/img3.png}" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title" > Metricas de Trabajo</h5>
+                    <p class="card-text"><small class="text-muted" >"Supera las expectativas, alcanza las métricas; nuestro compromiso es la excelencia en cada tarea que realizamos."</small></p>
+       
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-    <!-- Footer -->
- <footer th:replace="layout/layout :: footer"></footer>
-    <script th:src="@{vendor/jquery/jquery.min.js}"></script>
-    <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+	</div>
+	
+	
+	<div class="consejo">
 
-  </body>
+		<h4 class="viaj">
+			Noticias
+		</h4>
+		<div id="tarjeta3" class="row text-center mb-3" >
+		<div class="card" style="max-width: 650px;" >
+        <div class="row g-0 mb-2"> 
+		<img th:src="@{/images/personal/img4.jpg}" height="350px" >
+		<h5 class="card-title" >Cuida tu Bienestar  </h5>
+		<p class="card-text"><small class="text-muted" >Conduciendo con Cuidado, Sirviendo con Compromiso: Nuestro Lema es tu Bienestar. </small></p>
+        </div>
+		</div>
+		<div class="card" style="max-width: 650px;" >
+        <div class="row g-0 mb-2"> 
+		<img th:src="@{/images/personal/img5.jpg}" height="350px" >
+		<h5 class="card-title" > Noticias</h5>
+		<p class="card-text"><small class="text-muted" >Revise las noticias actuales para estar al tanto de los acontecimientos y mantenerse informado sobre la situación del país.</small></p>
+        </div>
+		</div>
+		</div>
+	</div>
+	<!-- Footer -->
+	<footer th:replace="personal/layout :: footer"></footer>
 
-  </html>
+	<script th:src="@{/js/personal/home.js}"></script>
+</body>
+
+</html>
